# data-science-script-library

./: .gitignore  CHANGELOG.md  CODE_QUALITY_AUDIT_REPORT.md  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  MAINTENANCE_JOB_2026-02-19.md  README.md  SECURITY.md  maintain.py  pyproject.toml  requirements-core.txt  requirements-full.txt  requirements.txt
.github/: copilot-instructions.json  copilot-instructions.md
maintenance/: script_library_baseline.json
notebooks/: first_week_lab_template.ipynb
tests/: README.md  conftest.py  test_audit_repo_health_snapshot.py  test_audit_runtime_artifacts_snapshot.py  test_audit_status_drift.py  test_audit_vscode_crash_logs.py  test_audit_web_dashboard_endpoints.py  test_benchmark_simulator.py  test_build_feature_dataset.py  test_check_command_blocks.py  test_check_pidfiles_status.py  test_clean_unicode.py  test_convert_to_pdf.py  test_csv_profile_report.py  test_data_cleaning_recipes.py  test_evaluate_scores_report.py  test_export_notebook.py  test_find_duplicate_functions.py  test_find_near_duplicate_functions.py  test_first_week_lab_template.py  test_generate_script_inventory.py  test_inspect_jsonl_gz_archive.py  test_inventory_json_to_csv.py  test_jsonl_profile.py  test_jsonl_to_csv.py  test_maintain_quick_mode.py  test_md_to_slides.py  test_metrics_exporter.py  test_model_eval_report.py  test_notebook_parameter_sweep.py  test_notebook_scrub_secrets.py  test_parquet_inspect.py  test_plot_score_distribution.py  test_plot_threshold_impact.py  test_plot_timeseries_from_csv.py  test_report_runtime_parameters.py  (+9 more)
(+56 files in other folders)
