[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-script-library"
version = "0.1.0"
description = "A small collection of standalone data-science helper scripts."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "joediggidyyy" }]

dependencies = [
  "nbformat>=5.9",
  "nbconvert>=7.10",
  "traitlets>=5.9",
  "reportlab>=4.0",
  "numpy>=1.23",
]

[project.optional-dependencies]
# Optional add-ons for scripts that intentionally avoid heavy imports by default.
docs = ["markdown2>=2.4"]
plots = ["matplotlib>=3.7"]
ml = ["scikit-learn>=1.2"]
parquet = ["pyarrow>=14.0"]
webpdf = ["nbconvert[webpdf]>=7.10"]

# Convenience bundle.
full = [
  "markdown2>=2.4",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
  "pyarrow>=14.0",
  "nbconvert[webpdf]>=7.10",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = []
